Task2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: scaletestapp
        image: ghcr.io/yandex-practicum/scaletestapp:latest
        resources:
          limits:
            memory: "30Mi"
          requests:
            memory: "20Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: ghcr-secret
